updated components and used prettier

--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -1,6 +1,6 @@
 .jumbotron {
     margin-top: 25px;
-    background-color: rgba(0,0,0,.03);
+    background-color: rgba(0, 0, 0, .03);
 }
 
 #heading {
