--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -13,7 +13,9 @@ body {
     float: left;
 }
 
-#appName, #searchBtn, #savedBtn {
+#appName,
+#searchBtn,
+#savedBtn {
     display: inline;
     border: none;
     background-color: transparent;
