--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,3 +17,9 @@ code {
   padding: 0;
   font-family: sans-serif;
 } */
+
+/* body {
+  background-image: url("./images/books.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+} */
